Resolves #1238 Recurring orders: NullReferenceException when manually triggering next recurring payment

--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -501,7 +501,7 @@
                 <smart-label asp-for="RecurringCycleLength" />
             </div>
             <div class="adminData">
-                <input asp-for="RecurringCycleLength" />
+                <editor asp-for="RecurringCycleLength" />
                 <span asp-validation-for="RecurringCycleLength"></span>
             </div>
         </div>
@@ -519,7 +519,7 @@
                 <smart-label asp-for="RecurringTotalCycles" />
             </div>
             <div class="adminData">
-                <input asp-for="RecurringTotalCycles" />
+                <editor asp-for="RecurringTotalCycles" />
                 <span asp-validation-for="RecurringTotalCycles"></span>
             </div>
         </div>
