--- a/src/Smartstore.Modules/Smartstore.OfflinePayment/Views/OfflinePayment/ManualConfigure.cshtml
+++ b/src/Smartstore.Modules/Smartstore.OfflinePayment/Views/OfflinePayment/ManualConfigure.cshtml
@@ -17,15 +17,6 @@
     <div class="adminContent">
         <div class="adminRow">
             <div class="adminTitle">
-                <smart-label asp-for="TransactMode" />
-            </div>
-            <div class="adminData">
-                <select asp-for="TransactMode" asp-items="Model.TransactModeValues"></select>
-                <span asp-validation-for="TransactMode"></span>
-            </div>
-        </div>
-        <div class="adminRow">
-            <div class="adminTitle">
                 <smart-label asp-for="ExcludedCreditCards" />
             </div>
             <div class="adminData">
@@ -35,10 +26,19 @@
         </div>
         <div class="adminRow">
             <div class="adminTitle">
+                <smart-label asp-for="TransactMode" />
+            </div>
+            <div class="adminData">
+                <select asp-for="TransactMode" asp-items="ViewBag.TransactModes"></select>
+                <span asp-validation-for="TransactMode"></span>
+            </div>
+        </div>
+        <div class="adminRow">
+            <div class="adminTitle">
                 <smart-label asp-for="AdditionalFee" />
             </div>
             <div class="adminData">
-                <editor asp-for="AdditionalFee" sm-postfix="@Model.PrimaryStoreCurrencyCode" />
+                <editor asp-for="AdditionalFee" sm-postfix="@ViewBag.PrimaryStoreCurrencyCode" />
                 <span asp-validation-for="AdditionalFee"></span>
             </div>
         </div>
