--- a/src/Smartstore.Modules/Smartstore.PayPal/Views/PayPalAdmin/Configure.cshtml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Views/PayPalAdmin/Configure.cshtml
@@ -336,6 +336,15 @@
                 ))
             </div>
         </div>
+        <div class="adminRow">
+            <div class="adminTitle">
+                <smart-label asp-for="CancelOrdersForDeclinedPayments" />
+            </div>
+            <div class="adminData">
+                <setting-editor asp-for="CancelOrdersForDeclinedPayments"></setting-editor>
+                <span asp-validation-for="CancelOrdersForDeclinedPayments"></span>
+            </div>
+        </div>
 
         <div class="adminRow">
             <div class="admin-config-group">
