Fixed sorting in recurring payment grid

--- a/src/Smartstore.Web/Areas/Admin/Views/RecurringPayment/_Grid.RecurringPayments.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/RecurringPayment/_Grid.RecurringPayments.cshtml
@@ -12,7 +12,7 @@
     <datasource read="@Url.Action("RecurringPaymentList")" />
     <paging position="Bottom" show-size-chooser="true" />
     <sorting allow-unsort="true" allow-multisort="false">
-        <sort by="StartDate" by-entity-member="StartDateUtc" />
+        <sort by="StartDate" by-entity-member="StartDateUtc" descending="true" />
     </sorting>
     <toolbar>
         <toolbar-group>
