RE: Dropzone wrapper review (you've changed it because you wanted to hide preview images for video uploads)

--- a/src/Smartstore.Web/wwwroot/skinning/_fileupload.scss
+++ b/src/Smartstore.Web/wwwroot/skinning/_fileupload.scss
@@ -233,6 +233,10 @@ $file-thumbnail-max-width:          calc(#{$file-thumbnail-min-size} / 9 * 16);
             height: $file-thumbnail-min-size;
             object-fit: contain;
         }
+
+        &:not([data-type='image']) > img {
+            display: none !important;
+        }
     }
 
     .toolbar {
