Minor CSS fix: show all items never had a border radius because the inner link overlapped them

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_artlist.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_artlist.scss
@@ -770,6 +770,7 @@
     padding: 0 !important;
     border-color: transparent !important;
     box-shadow: none !important;
+    overflow: hidden;
 
     .show-all-items-link {
         display: flex;
