--- a/src/Smartstore.Web/Areas/Admin/Views/RecurringPayment/_Grid.RecurringPayments.Search.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/RecurringPayment/_Grid.RecurringPayments.Search.cshtml
@@ -13,6 +13,10 @@
     <editor asp-for="CustomerEmail" asp-template="SearchExpression" />
 </div>
 <div class="form-group">
+    <smart-label asp-for="RemainingCycles" />
+    <editor asp-for="RemainingCycles" />
+</div>
+<div class="form-group">
     <smart-label asp-for="InitialOrderNumber" />
     <input asp-for="InitialOrderNumber" />
 </div>
