#1238 Recurring payments improvements in frontend. Fixed form value of submit button not transmitted when using `confirm2` (on a submit button)

--- a/src/Smartstore.Web/Areas/Admin/Views/Order/_Edit.Products.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Order/_Edit.Products.cshtml
@@ -79,7 +79,9 @@
                                     @Html.Raw(item.AttributeDescription)
                                 </div>
                                 <div sm-if="item.RecurringInfo.HasValue()">
-                                    @Html.Raw(item.RecurringInfo)
+                                    <a href="@Url.Action("Edit", "RecurringPayment", new { id = Model.RecurringPaymentId, area = "Admin" })">
+                                        @Html.Raw(item.RecurringInfo)
+                                    </a>
                                 </div>
                                 <div sm-if="item.Sku.HasValue()">
                                     <span class="fwm">@T("Admin.Orders.Products.SKU")</span>: @item.Sku
