Made ResiliencySettings.EnableOverloadProtection FALSE by default

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
@@ -205,7 +205,7 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
     padding: $pd-offer-spacing;
     line-height: $pd-line-height;
     width: 100%;
-    border-radius: var(--border-radius-md);
+    border-radius: var(--border-radius-lg);
 }
 
 .row.pd-offer-actions {
