--- a/src/Smartstore.Modules/Smartstore.Shipping/Views/ByTotal/Configure.cshtml
+++ b/src/Smartstore.Modules/Smartstore.Shipping/Views/ByTotal/Configure.cshtml
@@ -60,6 +60,15 @@
                         <span asp-validation-for="LimitMethodsToCreated"></span>
                     </div>
                 </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="UseShippingOriginIfShippingAddressMissing" />
+                    </div>
+                    <div class="adminData">
+                        <input asp-for="UseShippingOriginIfShippingAddressMissing" />
+                        <span asp-validation-for="UseShippingOriginIfShippingAddressMissing"></span>
+                    </div>
+                </div>
             </div>
         </form>
     </tab>
