--- a/src/Smartstore.Web/Views/Install/Index.cshtml
+++ b/src/Smartstore.Web/Views/Install/Index.cshtml
@@ -42,6 +42,7 @@
 
     <script src="~/lib/modernizr/modernizr.js"></script>
     <script src="~/lib/jquery/jquery-3.7.1.min.js"></script>
+    <script src="~/lib/popper/popper.min.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <style>
