Resolves #1256 Implement search filter for CreatedDateUtc in customer grid

--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/Grids/_Grid.Customers.Search.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/Grids/_Grid.Customers.Search.cshtml
@@ -16,6 +16,18 @@
     <smart-label asp-for="SearchCustomerNumber" />
     <input asp-for="SearchCustomerNumber" class="form-control-sm" />
 </div>
+<div class="form-group">
+    <div class="form-row">
+        <div class="col">
+            <smart-label asp-for="StartDate" />
+            <editor asp-for="StartDate" asp-additional-viewdata='new { size = "sm" }' />
+        </div>
+        <div class="col">
+            <smart-label asp-for="EndDate" />
+            <editor asp-for="EndDate" asp-additional-viewdata='new { size = "sm" }' />
+        </div>
+    </div>
+</div>
 @if (Model.DateOfBirthEnabled)
 {
     // INFO: we assume customers must be at least 14 years old and are not older than 70.
