--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/Grids/_Grid.Customers.Search.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/Grids/_Grid.Customers.Search.cshtml
@@ -17,14 +17,13 @@
     <input asp-for="SearchCustomerNumber" class="form-control-sm" />
 </div>
 <div class="form-group">
+    <smart-label sm-text="@T("Common.CreatedOn")" sm-ignore-hint="true" asp-for="StartDate" />
     <div class="form-row">
-        <div class="col">
-            <smart-label asp-for="StartDate" />
-            <editor asp-for="StartDate" asp-additional-viewdata='new { size = "sm" }' />
+        <div class="col-6">
+            <editor asp-for="StartDate" asp-additional-viewdata='new { size = "sm" }' placeholder="@T("Common.From")" />
         </div>
-        <div class="col">
-            <smart-label asp-for="EndDate" />
-            <editor asp-for="EndDate" asp-additional-viewdata='new { size = "sm" }' />
+        <div class="col-6">
+            <editor asp-for="EndDate" asp-additional-viewdata='new { size = "sm" }' placeholder="@T("Common.To")" />
         </div>
     </div>
 </div>
