--- a/src/Smartstore.Web/Areas/Admin/Views/Order/Grids/_Grid.Orders.Search.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Order/Grids/_Grid.Orders.Search.cshtml
@@ -8,14 +8,13 @@
 }
 
 <div class="form-group">
+    <smart-label sm-text="@T("Common.CreatedOn")" sm-ignore-hint="true" asp-for="StartDate" />
     <div class="form-row">
-        <div class="col">
-            <smart-label asp-for="StartDate" />
-            <editor asp-for="StartDate" asp-additional-viewdata='new { size = "sm" }' />
+        <div class="col-6">
+            <editor asp-for="StartDate" asp-additional-viewdata='new { size = "sm" }' placeholder="@T("Common.From")" />
         </div>
-        <div class="col">
-            <smart-label asp-for="EndDate" />
-            <editor asp-for="EndDate" asp-additional-viewdata='new { size = "sm" }' />
+        <div class="col-6">
+            <editor asp-for="EndDate" asp-additional-viewdata='new { size = "sm" }' placeholder="@T("Common.To")" />
         </div>
     </div>
 </div>
