Don't display quick checkout buttons of payment providers with button solutions. Recurring payments must be handled by payment selection page.

--- a/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
@@ -96,7 +96,7 @@
                                                     <i class="fa fa-angle-right"></i>
                                                 </button>
                                             </div>
-                                            <div id="cart-payment-buttons">
+                                            <div sm-if="!Model.HasItemsWithRecurringPayment" id="cart-payment-buttons">
                                                 <partial name="CartPaymentButtons" model="Model" />
                                             </div>
                                         </div>
