--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
@@ -31,6 +31,7 @@
 
     .horizontal-image {
         width: 100%;
+        height: 300px;
         max-height: 300px;
     }
     /*  // Unused. For test or future use.  
